--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch src/server.js"
+    "dev": "node --watch src/server.js",
+    "dev-upload": "node --watch serverUpload.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv-parse": "^5.3.10"
+    "csv-parse": "^5.3.10",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
